force-app/main/default/objects/User_Research_Activity__c/User_Research_Activity__c.object-meta.xml
<CustomObject>
    <label>User Research Activity</label>
    <nameField>
        <displayFormat>URA-{0000000}</displayFormat>
        <label>URA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Research Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>