force-app/main/default/objects/User_Research_Activity__c/fields/Research_Date__c.field-meta.xml
<CustomField>
    <fullName>Research_Date__c</fullName>
    <inlineHelpText>Add the date of the research activity this user participated in.</inlineHelpText>
    <label>Research Date</label>
    <type>Date</type>
</CustomField>