force-app/main/default/objects/User_Research_Activity__c/fields/Research_Name__c.field-meta.xml
<CustomField>
    <fullName>Research_Name__c</fullName>
    <inlineHelpText>Include the name of the research activity this user participated in.</inlineHelpText>
    <label>Research Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>