force-app/main/default/objects/User_Research_Activity__c/fields/Research_Type__c.field-meta.xml
<CustomField>
    <fullName>Research_Type__c</fullName>
    <inlineHelpText>Select the relevant research activity this user participated in.</inlineHelpText>
    <label>Research Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>