force-app/main/default/objects/User_Research_Activity__c/fields/User_Research__c.field-meta.xml
<CustomField>
    <fullName>User_Research__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User Research</label>
    <referenceTo>User_Research__c</referenceTo>
    <relationshipLabel>User Research Activities</relationshipLabel>
    <relationshipName>User_Research_Activities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>